--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -119,6 +119,13 @@
 a{
     cursor: pointer;
 }
+.msl-wrp .msl{
+    border-radius: 3px !important;
+    border-color: #d9d9d9;
+}
+.msl-wrp{
+    width: 100% !important;
+}
 @media screen and (max-width:1199px) {
     .single-grid.total-customers,
     .single-grid.total-products {
