--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -131,6 +131,49 @@ a{
     left: 20%;
     top: 8%;
 }
+.form-horizontal .check{
+    display: flex;
+    min-height: 27px;
+    padding-top: 7px;
+}
+.form-horizontal .check input{
+    padding: 0;
+  height: initial;
+  width: initial;
+  margin-bottom: 0;
+  display: none;
+  cursor: pointer;
+}
+.form-horizontal .check label{
+    cursor: pointer;
+    position: relative;
+}
+.form-horizontal .check label::before{
+    content:'';
+    -webkit-appearance: none;
+    background-color: transparent;
+    border: 2px solid #7a7a7a;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+    padding: 7px;
+    display: inline-block;
+    position: relative;
+    vertical-align: middle;
+    cursor: pointer;
+    margin-right: 5px;
+}
+.form-horizontal .check input:checked + label::after{
+        content: '';
+        display: block;
+        position: absolute;
+        top: 3px;
+        left: 7px;
+        width: 5px;
+        height: 14px;
+        border: solid #0079bf;
+        border-width: 0 2px 2px 0;
+        transform: rotate(45deg);
+      }
+
 @media screen and (max-width:1199px) {
     .single-grid.total-customers,
     .single-grid.total-products {
