--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -147,12 +147,16 @@ a{
 .form-horizontal .check label{
     cursor: pointer;
     position: relative;
+    font-size: 15px;
+    font-weight: 400;
 }
 .form-horizontal .check label::before{
     content:'';
     -webkit-appearance: none;
     background-color: transparent;
-    border: 2px solid #7a7a7a;
+    border-radius: 3px;
+    border: 2px solid #e9e9e9;
+    background-color: #e9e9e9;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
     padding: 7px;
     display: inline-block;
@@ -161,6 +165,11 @@ a{
     cursor: pointer;
     margin-right: 5px;
 }
+.form-horizontal .check  input:checked + label::before{
+    background-color: #0068e1;
+    border: 2px solid #0068e1;
+  
+  }
 .form-horizontal .check input:checked + label::after{
         content: '';
         display: block;
@@ -169,7 +178,7 @@ a{
         left: 7px;
         width: 5px;
         height: 14px;
-        border: solid #0079bf;
+        border: solid #fff;
         border-width: 0 2px 2px 0;
         transform: rotate(45deg);
       }
