--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1,212 +1,225 @@
 .grid .single-grid {
-    position: relative;
-    overflow: hidden;
-    height: 130px;
-    padding: 0 15px;
-    background: #fff;
-    border-radius: 3px;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1)
+  position: relative;
+  overflow: hidden;
+  height: 130px;
+  padding: 0 15px;
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .grid .single-grid h4 {
-    margin: 22px 0
+  margin: 22px 0;
 }
 
 .grid .single-grid span {
-    font-size: 26px;
-    margin-top: 3px
+  font-size: 26px;
+  margin-top: 3px;
 }
 
 .grid .single-grid i {
-    font-size: 36px;
-    position: absolute;
-    left: 15px;
-    bottom: 22px;
-    margin: 0
+  font-size: 36px;
+  position: absolute;
+  left: 15px;
+  bottom: 22px;
+  margin: 0;
 }
 
 .grid .single-grid.total-orders i {
-    color: rgba(0, 104, 225, .7)
+  color: rgba(0, 104, 225, 0.7);
 }
 
 .grid .single-grid.total-sales i {
-    color: rgba(112, 124, 210, .7)
+  color: rgba(112, 124, 210, 0.7);
 }
 
 .grid .single-grid.total-customers i {
-    color: rgba(255, 51, 102, .7)
+  color: rgba(255, 51, 102, 0.7);
 }
 
 .grid .single-grid.total-products i {
-    color: rgba(55, 188, 155, .7)
+  color: rgba(55, 188, 155, 0.7);
 }
 
 .dashboard-panel {
-    margin-top: 30px;
-    padding: 0 15px;
-    background: #fff;
-    overflow: hidden;
-    border-radius: 3px;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1)
+  margin-top: 30px;
+  padding: 0 15px;
+  background: #fff;
+  overflow: hidden;
+  border-radius: 3px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .dashboard-panel .table-responsive {
-    margin-bottom: 10px
+  margin-bottom: 10px;
 }
 
 .grid-header {
-    overflow: auto
+  overflow: auto;
 }
 
 .grid-header h4 {
-    margin: 15px 0;
-    float: left
+  margin: 15px 0;
+  float: left;
 }
 
 .grid-header h4 i {
-    margin-right: 8px
+  margin-right: 8px;
 }
 
 .sales-analytics {
-    background: #fff;
-    margin-top: 30px;
-    padding: 0 15px 15px;
-    border-radius: 3px;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1)
+  background: #fff;
+  margin-top: 30px;
+  padding: 0 15px 15px;
+  border-radius: 3px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .sales-analytics .chart {
-    height: 282px !important
+  height: 282px !important;
 }
 
-.anchor-table .table>tbody>tr>td {
-    padding: 0
+.anchor-table .table > tbody > tr > td {
+  padding: 0;
 }
 
-.anchor-table .table>tbody>tr>td a {
-    display: block;
-    padding: 12px 8px;
-    color: #626060;
-    text-decoration: none
+.anchor-table .table > tbody > tr > td a {
+  display: block;
+  padding: 12px 8px;
+  color: #626060;
+  text-decoration: none;
 }
 
-.anchor-table .table>tbody>tr>td.empty {
-    text-align: center;
-    padding: 10px 0
+.anchor-table .table > tbody > tr > td.empty {
+  text-align: center;
+  padding: 10px 0;
 }
 
-.anchor-table .table>tbody>tr:hover a {
-    color: #0059bd
+.anchor-table .table > tbody > tr:hover a {
+  color: #0059bd;
 }
 
-.search-terms tbody>tr>td {
-    color: #626060;
-    padding: 12px 8px
+.search-terms tbody > tr > td {
+  color: #626060;
+  padding: 12px 8px;
 }
 
-.search-terms tbody>tr>td.empty {
-    text-align: center;
-    padding: 10px 0
+.search-terms tbody > tr > td.empty {
+  text-align: center;
+  padding: 10px 0;
 }
 
-.display-block{
-    display: block;
+.display-block {
+  display: block;
 }
 
-.rdt_TableHeader{
-    display: none !important;
+.rdt_TableHeader {
+  display: none !important;
 }
-a{
-    cursor: pointer;
+a {
+  cursor: pointer;
 }
-.msl-wrp .msl{
-    border-radius: 3px !important;
-    border-color: #d9d9d9;
+.msl-wrp .msl {
+  border-radius: 3px !important;
+  border-color: #d9d9d9;
 }
-.msl-wrp{
-    width: 100% !important;
+.msl-wrp {
+  width: 100% !important;
 }
-.table-delete-button{
-    position: absolute;
-    left: 20%;
-    top: 8%;
+.table-delete-button {
+  position: absolute;
+  left: 20%;
+  top: 8%;
 }
-.form-horizontal .check{
-    display: flex;
-    min-height: 27px;
-    padding-top: 7px;
+.form-horizontal .check {
+  display: flex;
+  min-height: 27px;
+  padding-top: 7px;
 }
-.form-horizontal .check input{
-    padding: 0;
+.form-horizontal .check input {
+  padding: 0;
   height: initial;
   width: initial;
   margin-bottom: 0;
   display: none;
   cursor: pointer;
 }
-.form-horizontal .check label{
-    cursor: pointer;
-    position: relative;
+.form-horizontal .check label {
+  cursor: pointer;
+  position: relative;
+  font-size: 15px;
+  font-weight: 400;
+}
+.form-horizontal .check label::before {
+  content: "";
+  -webkit-appearance: none;
+  background-color: transparent;
+  border-radius: 3px;
+  border: 2px solid #e9e9e9;
+  background-color: #e9e9e9;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
+    inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 7px;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  cursor: pointer;
+  margin-right: 5px;
+}
+.form-horizontal .check input:checked + label::before {
+  background-color: #0068e1;
+  border: 2px solid #0068e1;
+}
+.form-horizontal .check input:checked + label::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 7px;
+  width: 5px;
+  height: 14px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+.msl-grp-title,
+.msl-options .msl-option {
+  letter-spacing: 0.5px;
+  font-size: 12px;
+}
+.MuiSvgIcon-root{
+    height: 1.5em !important;
+    width: 1.5em !important;
+}
+.rdt_TableCol_Sortable{
     font-size: 15px;
-    font-weight: 400;
 }
-.form-horizontal .check label::before{
-    content:'';
-    -webkit-appearance: none;
-    background-color: transparent;
-    border-radius: 3px;
-    border: 2px solid #e9e9e9;
-    background-color: #e9e9e9;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
-    padding: 7px;
-    display: inline-block;
-    position: relative;
-    vertical-align: middle;
-    cursor: pointer;
-    margin-right: 5px;
+.rdt_TableRow{
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
 }
-.form-horizontal .check  input:checked + label::before{
-    background-color: #0068e1;
-    border: 2px solid #0068e1;
-  
+.rdt_TableCell{
+    font-size: 16px !important; 
+}
+@media screen and (max-width: 1199px) {
+  .single-grid.total-customers,
+  .single-grid.total-products {
+    margin-top: 15px;
   }
-.form-horizontal .check input:checked + label::after{
-        content: '';
-        display: block;
-        position: absolute;
-        top: 3px;
-        left: 7px;
-        width: 5px;
-        height: 14px;
-        border: solid #fff;
-        border-width: 0 2px 2px 0;
-        transform: rotate(45deg);
-      }
-      .msl-grp-title, .msl-options .msl-option{
-          letter-spacing: 0.5px;
-          font-size: 12px;
-      }
-
-@media screen and (max-width:1199px) {
-    .single-grid.total-customers,
-    .single-grid.total-products {
-        margin-top: 15px
-    }
-    .table-delete-button{
-        position: absolute;
-        left: 30%;
-        top: 8%;
-    }
+  .table-delete-button {
+    position: absolute;
+    left: 30%;
+    top: 8%;
+  }
 }
 
-@media screen and (max-width:767px) {
-    .single-grid.total-orders {
-        margin-top: 15px
-    }
-    .table-delete-button{
-        position: relative;
-        left: 5%;
-        top: 0;
-    }
+@media screen and (max-width: 767px) {
+  .single-grid.total-orders {
+    margin-top: 15px;
+  }
+  .table-delete-button {
+    position: relative;
+    left: 5%;
+    top: 0;
+  }
 }
-
