--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -129,7 +129,7 @@ a {
 .table-delete-button {
   position: absolute;
   left: 20%;
-  top: 8%;
+  top: 6%;
 }
 .dropzone .dz-preview.dz-image-preview{
   background: none !important;
@@ -234,6 +234,19 @@ a {
   --menu-max-height: 200px !important;
 }
 
+.bf-container .public-DraftEditor-content{
+  max-height: 300px;
+  overflow-y: auto;
+}
+.bf-content{
+  height: 300px !important;
+}
+.bf-container{
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+}
+
+
 @media screen and (max-width: 1199px) {
   .single-grid.total-customers,
   .single-grid.total-products {
@@ -242,7 +255,7 @@ a {
   .table-delete-button {
     position: absolute;
     left: 30%;
-    top: 8%;
+    top: 5%;
   }
 }
 
