--- a/src/components/Media/media.css
+++ b/src/components/Media/media.css
@@ -67,3 +67,10 @@
       margin: 10px;
     }
   }
+
+  .react-responsive-modal-modal{
+    max-height: 700px;
+    min-width: 70%;
+    padding: 0;
+    overflow-y: scroll;
+  }
