--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -160,6 +160,12 @@ a {
 .image-upload:hover{
   background: #f1f3f7cc;
 }
+.dashboard-table-row:hover{
+  cursor: pointer;
+}
+.dashboard-table-row:hover td{
+  color: #0059bd;
+}
 /*.form-horizontal .check {
   display: flex;
   min-height: 27px;
