--- a/src/components/Product/Categories/styles.css
+++ b/src/components/Product/Categories/styles.css
@@ -35,7 +35,7 @@
     border-left: 2px solid chocolate;
 }
 .rc-tree .rc-tree-treenode.drop-target {
-    background-color: yellowgreen;
+    background-color: none;
 }
 .rc-tree .rc-tree-treenode.drop-target ~ .rc-tree-treenode {
     border-left: none;
